Fixes sizing and overflow of info image and a few other styles

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ footer {
 }
 
 header {
-    margin: 1rem 1rem 0 1rem;
+    padding: 1rem 1rem 0 1rem;
 }
 
 footer {
@@ -77,7 +77,6 @@ footer {
 .brand-name--white {
     color: #FFFFFF;
 }
-
 
 /* || Intro */
 
@@ -105,9 +104,14 @@ footer {
     margin: 1.5rem auto 0 1rem;
 }
 
+.intro__img-container {
+    overflow: clip;
+}
+
 .intro__img {
-    margin-top: 2.875rem; /*  1.5em 0 1.5em*/
-    width: 100vw;
+    margin-top: 2.875rem;
+    max-width: 100vw;
+    transform: scale(1.15);
 }
 
 /* || Course Tiles */
@@ -116,8 +120,9 @@ footer {
     display: flex;
     flex-wrap: wrap;
     background-color: #FFFFFF; /* for browsers that don't support gradient */
-    background: linear-gradient(#FFFFFF, #F2F2F2);
+    background: linear-gradient(#FFFFFF, #F0F1FF);
     flex: 1;
+    padding-bottom: 3.75rem;
 }
 
 .tiles-group__heading {
@@ -125,6 +130,7 @@ footer {
     padding: 1.5rem 1.75rem 2rem 1.75rem;
     margin: 0 1rem 0 1rem;
     border-radius: 0.625rem;
+    line-height: 2rem;
 }
 
 .tile {
@@ -164,17 +170,3 @@ footer {
     background-color: #FFFFFF;
     margin: 1.5rem 0 2rem 0;
 }
-
-/** 
-Colors:
-
-#666CA3 light blue gray
-#13183F dark blue
-#83869A grey
-#F74780 dark pink
-#FFA7C3 light pink
-#FFFFFF white
-#F02AA6-FF6F48 orange to pink
-#4851FF-F02AA6 blue to purple
-
-**/
